# Seth2.0

./: .gitignore  AUTHENTICATION_ERROR_FIX.md  CHECKPOINT_STOCK_MANAGEMENT.md  CLINIC_DEPLOYMENT_SUCCESS.md  CLINIC_IMPLEMENTATION_COMPLETE.md  CLINIC_READY_CHECKLIST.md  CLINIC_READY_FINAL.md  COMPLETE_CLINIC_READY_FINAL.md  COMPREHENSIVE_TESTING_GUIDE.md  COMPREHENSIVE_TESTING_STATUS.md  COMPREHENSIVE_TEST_RESULTS.md  CONTAINERS_AND_SCRIPTS_README.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DIAGNOSTICS_SYSTEM_README.md  DUAL_DATABASE_SETUP.md  Dockerfile  EYE_COMFORT_IMPROVEMENTS.md  FINAL_CLINIC_DEPLOYMENT_WITH_MPESA.md  FINAL_CLINIC_IMPLEMENTATION_SUMMARY.md  FINAL_SYSTEM_DEMONSTRATION.md  FINAL_SYSTEM_STATUS.md  FINANCIAL_CONSOLIDATION_UPDATE.md  FINANCIAL_RECORDING_SYSTEM.md  FRONTEND_FIX_ACTION_PLAN.md  FRONTEND_PERFORMANCE_OPTIMIZATION.md  FRONTEND_UPDATES_COMPLETE.md  MPESA_SETUP_GUIDE.md  PATIENT_ASSIGNMENT_SYSTEM.md  PATIENT_MANAGEMENT_SYSTEM_UPDATE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHARMACIST_FINANCIAL_ROLE_UPDATE.md  PRESCRIPTION_SYSTEM_README.md  PRODUCTION_IMPLEMENTATION_CHECKLIST.md  PRODUCTION_QUICK_REFERENCE.md  PRODUCTION_UPDATE_GUIDE.md  README.md  README_ORGANIZED.md  RECEPTIONIST_SHA_ROLE_UPDATE.md  ROLE_BASED_ACCESS.md  (+31 more)
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  (+1 more)
rust-api/: Cargo.toml  Dockerfile  README.md  benchmarks.md
rust-api/src/: main.rs
rust-api/src/handlers/: patients.rs
rust-api/src/middleware/: rate_limit.rs
rust-api/src/models/: patient.rs
rust-api/src/services/: patient_service.rs
(+615 files in other folders)
